# game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gamedata/: list.json
gamedata/assets/: assets.json  block-types.json
src/: main.cpp
src/engine/: assets_manager.hpp  camera.hpp  core.hpp  gui.hpp  logger.hpp  map.hpp  runtime_config.hpp  widget.hpp  window.hpp
submodules/json/single_include/nlohmann/: json.hpp
